<resources>
    <string name="app_name">BakingApp</string>
    <string name="Ingredients">Ingredients</string>
    <string name="Ingredient">Ingredient : </string>
    <string name="Quantity">Quantity : </string>
    <string name="Measure">Measure : </string>
    <string name="servings">Servings : </string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="name">Name : </string>
    <string name="servings_value">Servings: %1$s</string>
    <string name="configure">Choose a recipe to show its ingredients in the widget.</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_recipe_text">Tap to select a recipe to show ingredients for</string>
    <string name="appwidget_ingredient_text_label">Showing Ingredients for: %1$s</string>
    <string name="name_sp_widget">sp_widget</string>
    <string name="key_widget_id">widget_id</string>
    <string name="label_ingredients_list">Get ready with the following ingredients for %1$s</string>
    <string name="ingredient_key">Ingredient</string>
    <string name="step_key">Steps</string>
</resources>
