<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ingredientLayout">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_shopping_cart_black_24dp"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_ingredients"
                android:text="@string/Ingredients"
                android:layout_weight="3"
                android:textSize="26sp"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:gravity="center"/>


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/background_dark"></View>

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rv_steps"></android.support.v7.widget.RecyclerView>



</LinearLayout>